# linux-usage

./: .gitignore  AGENTS.md  Makefile  README.md  TODO.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
contracts/: snapshot.schema.json
contracts/examples/: snapshot.example.json
docs/: architecture.md
docs/provider-notes/: claude.md  codex.md  copilot.md
extension/: extension.js  metadata.json  preferences-app.js  prefs.js  stylesheet.css
extension/schemas/: org.kinanl.linux-usage.gschema.xml
extension/src/models/: state.js
extension/src/prefs/: prefs.js
extension/src/ui/: popup.js
helper/: Cargo.toml
helper/src/: main.rs
helper/src/cache/: backoff.rs  mod.rs
helper/src/dbus/: service.rs
helper/src/models/: mod.rs  provider.rs  snapshot.rs
helper/src/providers/: catalog.rs  mod.rs
helper/src/providers/claude/: mod.rs
helper/src/providers/codex/: mod.rs
helper/src/providers/copilot/: mod.rs
helper/src/sessions/: mod.rs
helper/tests/: contracts.rs
packaging/: linux-usage-helper.service
packaging/extension-bundle/: README.md
packaging/rpm/: README.md
scripts/: build-extension.mjs  build-legacy-gjs.mjs  install-extension.sh  install-helper.sh  run-helper.sh  typecheck-extension.mjs  write-metadata.mjs
src/: ambient.d.ts
src/extension/: extension.ts  metadata.json  preferences-app.ts  prefs.css  prefs.ts  providers.json  stylesheet.css
src/helper/: cache.ts  dbus.ts  helper.ts  http.ts  registry.ts  utils.ts
ts/: ambient.d.ts
ts/extension/: extension.ts  preferences-app.ts  prefs.ts
(+20 files in other folders)
